# moon-galbot

./: CONTEXT.md  PLAN.md  README.md  pyproject.toml
deploy/: config.py  correction.py  policy_runtime.py  quant_ab.py  run_g1.py  shared_state.py  test.py  tts.py  verify_4bit.py  verify_tracker.py  vlm_worker.py  voice.py
docs/adr/: 0001-vlm-decoupled-act-over-pi05.md
tools/: analyze_target_dist.py  detect_markers.py  markers.py  preview_markers.py
training/: retrain_pointonly.md  train_act.sh  train_act_pointonly.py
